LOVING-SF/force-app/main/default/objects/Lead/fields/Desired_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Desired_Timeline__c</fullName>
    <label>Desired Timeline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>