LOVING-SF/force-app/main/default/objects/Lead/fields/ODL_Path__c.field-meta.xml
<CustomField>
    <fullName>ODL_Path__c</fullName>
    <label>ODL Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>UMB</fullName><default>false</default><label>UMB</label></value>
            <value><fullName>Custom Build</fullName><default>false</default><label>Custom Build</label></value>
            <value><fullName>Lawn Care</fullName><default>false</default><label>Lawn Care</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>