LOVING-SF/force-app/main/default/objects/Lead/fields/Package_Fit__c.field-meta.xml
<CustomField>
    <fullName>Package_Fit__c</fullName>
    <label>Package Fit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Retreat</fullName><default>false</default><label>Retreat</label></value>
            <value><fullName>Entertainer</fullName><default>false</default><label>Entertainer</label></value>
            <value><fullName>Signature</fullName><default>false</default><label>Signature</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>