LOVING-SF/force-app/main/default/objects/Lead/fields/Preferred_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Frequency__c</fullName>
    <label>Preferred Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Weekly</fullName><default>false</default><label>Weekly</label></value>
            <value><fullName>Bi-Weekly</fullName><default>false</default><label>Bi-Weekly</label></value>
            <value><fullName>Monthly</fullName><default>false</default><label>Monthly</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>