LOVING-SF/force-app/main/default/objects/Lead/fields/Property_Size__c.field-meta.xml
<CustomField>
    <fullName>Property_Size__c</fullName>
    <label>Property Size (sqft)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>