LOVING-SF/force-app/main/default/objects/Lead/fields/Service_Interest__c.field-meta.xml
<CustomField>
    <fullName>Service_Interest__c</fullName>
    <label>Service Interest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>