LOVING-SF/force-app/main/default/objects/Lead/fields/Site_Visit_Needed__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Needed__c</fullName>
    <label>Site Visit Needed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>