LOVING-SF/force-app/main/default/objects/Lead/fields/Start_Window__c.field-meta.xml
<CustomField>
    <fullName>Start_Window__c</fullName>
    <label>Start Window</label>
    <length>100</length>
    <type>Text</type>
</CustomField>